[package]
name = "normal2bump"
description = "Convert tangent-space normal maps to height/bump maps"
version = "0.1.0"
edition = "2021"

[dependencies]
clap        = {version="4.0.32", features=["derive"]}
image       = "^0.24"
rayon       = "^1.6"
wgpu        = "0.14"
anyhow      = "1.0.68"
pollster    = "0.2"
bytemuck    = {version="1.12", features=["derive"]}
